# bait_mcp

./: CLAUDE.md  README.md  REFACTOR_PLAN.md  pyproject.toml  todo.md
configs/: example.yaml
scripts/: kill_bait.sh
src/bait_mcp/: __init__.py  config.py  launcher.py  mcp_server.py  protocol.py  qserver_client.py  worker.py  zmq_client.py
src/bait_mcp/ophyd_websocket/: CLAUDE.md  __init__.py  device_registry.py  queue_safety.py  server.py
src/bait_mcp/ophyd_websocket/routers/: camera_socket.py  core_api.py  device_socket.py  pv_socket.py  qs_console_socket.py
tests/: test_config.py  test_qserver_client.py
