[project]
name = "bait-mcp"
version = "0.1.0"
description = "MCP server exposing a Bluesky/BITS instrument to LLM agents via the bluesky-queueserver."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.9.0",
    "pyyaml>=6.0.0",
    "bluesky-queueserver-api>=0.0.13",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
bait-mcp = "bait_mcp.launcher:main"
bait-mcp-server = "bait_mcp.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
